RESOLVED FIXED138421
[WinCairo] Compile error, missing guard.
https://bugs.webkit.org/show_bug.cgi?id=138421
Summary [WinCairo] Compile error, missing guard.
peavo
Reported 2014-11-05 06:46:10 PST
There is missing a guard for CSS_SELECTORS_LEVEL4 in CSSParserValues.cpp.
Attachments
Patch (1.47 KB, patch)
2014-11-05 06:50 PST, peavo
no flags
peavo
Comment 1 2014-11-05 06:50:02 PST
Brent Fulgham
Comment 2 2014-11-05 08:52:55 PST
Comment on attachment 241026 [details] Patch r=me. Thank you for fixing this!
Brent Fulgham
Comment 3 2014-11-05 08:54:28 PST
This bug was introduced in <http://trac.webkit.org/changeset/175446>.
WebKit Commit Bot
Comment 4 2014-11-05 09:35:12 PST
Comment on attachment 241026 [details] Patch Clearing flags on attachment: 241026 Committed r175621: <http://trac.webkit.org/changeset/175621>
WebKit Commit Bot
Comment 5 2014-11-05 09:35:15 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 6 2014-11-05 11:00:24 PST
(In reply to comment #2) > Comment on attachment 241026 [details] > Patch > > r=me. Thank you for fixing this! Thanks for reviewing :)
Dhi Aurrahman
Comment 7 2014-11-05 15:04:37 PST
Thank you for fixing this. My bad.
Note You need to log in before you can comment on or make changes to this bug.